server/BalticServers/etc-iptables-rules.v4
# Generated by iptables-save v1.4.21 on Tue Sep 22 13:55:44 2015
*mangle
:PREROUTING ACCEPT [2123:710851]
:INPUT ACCEPT [1391:212478]
:FORWARD ACCEPT [721:497727]
:OUTPUT ACCEPT [1298:211142]
:POSTROUTING ACCEPT [2019:708869]
COMMIT
# Completed on Tue Sep 22 13:55:44 2015
# Generated by iptables-save v1.4.21 on Tue Sep 22 13:55:44 2015
*nat
:PREROUTING ACCEPT [16:1113]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [16:1161]
:POSTROUTING ACCEPT [32:2121]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.17.0.18/32 -d 172.17.0.18/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A POSTROUTING -s 172.17.0.1/32 -d 172.17.0.1/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A POSTROUTING -s 172.17.0.1/32 -d 172.17.0.1/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A POSTROUTING -s 172.17.0.1/32 -d 172.17.0.1/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.17.0.1:80
COMMIT
# Completed on Tue Sep 22 13:55:44 2015
# Generated by iptables-save v1.4.21 on Tue Sep 22 13:55:44 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [416:66729]
:DOCKER - [0:0]
-A INPUT -p tcp -m tcp --dport 80 -j DOCKER
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -j DROP
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER -d 172.17.0.1/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 80 -j ACCEPT
COMMIT
# Completed on Tue Sep 22 13:55:44 2015
